Implement carousel for mobile and desktop

--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,22 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  font-family: 'Kumbh Sans', sans-serif;
+.thumbnail:hover::after,
+.thumbnail.hovered::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: white;
+  opacity: .5; /* Adjust for desired fade level */
 }
 
+
+:root {
+  font-family: "Kumbh Sans", sans-serif;
+}
 
 li {
   cursor: pointer;
