--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ li {
 }
 
 li:hover::after {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   width: 100%;
@@ -37,8 +37,6 @@ li:hover::after {
 li:hover {
   color: black;
 }
-
-
 
 .filter-close {
   filter: invert(100%) sepia(2%) saturate(9%) hue-rotate(331deg)
@@ -73,5 +71,34 @@ li:hover {
 .filter-quantity {
   filter: brightness(0) saturate(100%) invert(59%) sepia(39%) saturate(4185%)
     hue-rotate(348deg) brightness(102%) contrast(101%);
+}
+
+
+@media (max-width: 425px) {
+  .cart {
+    width: 42vh;
+    max-width: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 260px;
+  }
+
+  .checkout-btn {
+    width: 300px;
+    margin-top: 5px;
+  }
+
+  .cart-active {
+    width: 321px;
+  }
+
+  .cart-list {
+    width: 228px;
+  }
+  
+  .delete-icon {
+    padding-left: 15px;
+  }
+
 }
 
